Found "Leak" in governing equation when not on uniform spaced mesh. Still need to fix. Added conservation check for mass, momentum, and energy. Mass and momentum are conservative on uniform mesh, problems with energy equation.

--- a/documentation/governingEquations/governingEquations.tex
+++ b/documentation/governingEquations/governingEquations.tex
@@ -326,11 +326,11 @@
       \end{equation*}
       Setting the density time derivative to zero and substituting \eqref{eq:solidContinuity} for the volume fraction time derivative transforms the equation to
       \begin{equation*}
-          \frac{\dot{m}'' A_i}{V_c} \frac{rho}{rho_s}
+          \frac{\dot{m}'' A_i}{V_c} \frac{\rho}{\rho_s}
         + \frac{1}{V_c}\sum_{f}\rho (\vec{u}\cdot\vec{A_{f}})\alpha_f
         = \frac{\dot{m}'' A_i}{V_c}.
       \end{equation*}
-      Rearranging this equation and defining the implicit and explicit source terms as $Sp_{\rho} = \dot{m}'' Ai / rho_s V_c$ and $Su_{\rho} = \dot{m}'' Ai / V_c$ respectively further yields
+      Rearranging this equation and defining the implicit and explicit source terms as $Sp_{\rho} = \dot{m}'' Ai / \rho_s V_c$ and $Su_{\rho} = \dot{m}'' Ai / V_c$ respectively further yields
       \begin{empheq}[box=\fbox]{align}
           \frac{1}{V_c}\sum_{f}\rho (\vec{u}\cdot\vec{A_{f}})\alpha_f
         = Su_{\rho} - Sp_{\rho} \rho.
